--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,6 @@
     "ndx-auth": "^0.0.23",
     "ndx-rest": "^0.1.6",
     "ndx-socket": "^0.0.6",
-    "ndx-form-extras": "^0.0.8",
     "angular-gravatar": "^0.4.2",
     "ndx-modal": "^0.0.5",
     "moment": "^2.18.1",
@@ -35,6 +34,9 @@
     "ndx-codemirror": "^0.0.8",
     "ndx-markdown": "^0.0.4",
     "ndx-scroll-top": "^0.0.11",
-    "ndx-pagination": "^0.1.1"
+    "ndx-pagination": "^0.1.1",
+    "angular-ui-select2": "^0.0.5",
+    "ng-file-upload": "^12.2.13",
+    "async": "^2.4.1"
   }
 }
