ready for travis/docker

--- a/bower.json
+++ b/bower.json
@@ -21,22 +21,23 @@
     "angular": "^1.6.4",
     "angular-touch": "^1.6.4",
     "angular-ui-router": "^1.0.3",
-    "ndx-auth": "^0.0.23",
-    "ndx-rest": "^0.1.6",
-    "ndx-socket": "^0.0.6",
     "angular-gravatar": "^0.4.2",
-    "ndx-modal": "^0.0.5",
     "moment": "^2.18.1",
     "hammerjs": "^2.0.8",
     "underscore": "^1.8.3",
+    "angular-ui-select2": "^0.0.5",
+    "ng-file-upload": "^12.2.13",
+    "async": "^2.4.1",
+    "ng-sumoselect": "^0.0.5",
+    "ndx-auth": "^0.1.0",
+    "ndx-rest": "^0.2.0",
+    "ndx-socket": "^0.0.6",
+    "ndx-modal": "^0.0.5",
     "ndx-alert": "^0.0.2",
     "ndx-array-extras": "^0.0.4",
     "ndx-codemirror": "^0.0.8",
     "ndx-markdown": "^0.0.4",
     "ndx-scroll-top": "^0.0.11",
-    "ndx-pagination": "^0.1.1",
-    "angular-ui-select2": "^0.0.5",
-    "ng-file-upload": "^12.2.13",
-    "async": "^2.4.1"
+    "ndx-pagination": "^0.1.1"
   }
 }
