--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vs-maintenance",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "",
   "main": "server/app.js",
   "scripts": {
@@ -45,7 +45,7 @@
     "ndx-permissions": "^0.3.2",
     "ndx-profiler": "^0.1.2",
     "ndx-rest": "^0.5.0",
-    "ndx-server": "^0.13.0",
+    "ndx-server": "0.12.12",
     "ndx-socket": "0.0.8",
     "ndx-static-routes": "0.0.13",
     "ndx-superadmin": "^0.1.4",
