--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,6 @@
     "ng-file-upload": "^12.2.13",
     "async": "^2.4.1",
     "ng-sumoselect": "^0.0.5",
-    "ndx-auth": "^0.1.0",
     "ndx-rest": "^0.2.0",
     "ndx-socket": "^0.0.6",
     "ndx-modal": "^0.0.5",
@@ -38,6 +37,7 @@
     "ndx-codemirror": "^0.0.8",
     "ndx-markdown": "^0.0.4",
     "ndx-scroll-top": "^0.0.11",
-    "ndx-pagination": "^0.1.1"
+    "ndx-pagination": "^0.1.1",
+    "ndx-auth": "^0.1.2"
   }
 }
