--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,6 @@
     "angular-ui-select2": "^0.0.5",
     "ng-file-upload": "^12.2.13",
     "async": "^2.4.1",
-    "ng-sumoselect": "^0.0.5",
     "ndx-rest": "^0.2.0",
     "ndx-socket": "^0.0.6",
     "ndx-modal": "^0.0.5",
@@ -38,6 +37,7 @@
     "ndx-markdown": "^0.0.4",
     "ndx-scroll-top": "^0.0.11",
     "ndx-pagination": "^0.1.1",
-    "ndx-auth": "^0.1.2"
+    "ndx-auth": "^0.1.2",
+    "ng-sumoselect": "^0.0.6"
   }
 }
