--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -1,14 +1,9 @@
 {
-    "name": "Conveyancing",
+    "name": "Maintenance",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/android-chrome-384x384.png",
-            "sizes": "384x384",
             "type": "image/png"
         }
     ],
