remove static routes

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ndx-auth": "^0.1.11",
     "ndx-connect": "0.0.6",
     "ndx-cors": "0.0.10",
+    "ndx-database-backup": "^0.1.0",
     "ndx-file-upload": "^0.1.13",
     "ndx-mailgun-api": "0.0.9",
     "ndx-passport": "^0.4.13",
@@ -47,7 +48,6 @@
     "ndx-rest": "^0.5.0",
     "ndx-server": "^0.13.8",
     "ndx-socket": "0.0.8",
-    "ndx-static-routes": "0.0.13",
     "ndx-superadmin": "^0.1.4",
     "ndx-user-roles": "^0.4.0"
   }
