--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "ndx-database-backup": "^0.1.0",
     "ndx-file-upload": "^0.1.13",
     "ndx-mailgun-api": "0.0.9",
-    "ndx-passport": "^0.4.13",
+    "ndx-passport": "^0.4.17",
     "ndx-permissions": "^0.3.3",
     "ndx-profiler": "^0.1.2",
-    "ndx-rest": "^0.5.0",
-    "ndx-server": "^0.13.8",
-    "ndx-socket": "0.0.8",
+    "ndx-rest": "^0.7.1",
+    "ndx-server": "^0.16.11",
+    "ndx-socket": "^0.1.1",
     "ndx-superadmin": "^0.1.4",
     "ndx-user-roles": "^0.4.0"
   }
